tests/invalid/function/generic_type_param_out_of_range.facet
fn bad(x: affine T) -> affine T {
  x
}

